infra/app-ns.yaml
apiVersion: v1
kind: Namespace

metadata:
  labels:
    istio.io/use-waypoint: waypoint
    kubernetes.io/metadata.name: app
  name: app
